--- a/docs/sun/172/sun172.tex
+++ b/docs/sun/172/sun172.tex
@@ -1,288 +1,95 @@
-\documentclass[twoside,11pt]{article}
-\pagestyle{myheadings}
+\documentclass[twoside,11pt,nolof]{starlink}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {172.1}
-\newcommand{\stardocauthors}   {Clive G Page \\ University of Leicester}
-\newcommand{\stardocdate}      {13 October 1993}
-\newcommand{\stardoctitle}     {FTNCHEK\\[2ex]
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {172.1}
+\stardocauthors     {Clive G Page \\ University of Leicester}
+\stardocdate        {13 October 1993}
+\stardoctitle     {FTNCHEK\\[2ex]
                                 A Fortran77 Source-code Checker}
+\stardocabstract{
+\texttt{FTNCHEK} is designed to detect a variety of errors in Fortran77
+source-code, especially mistakes that tend to be missed by compilers
+and linkers.
+}
 % ? End of document identification
 
 % -----------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-% Define commands for HTML-only or LaTeX-only text.
-\newcommand{\html}[1]{}
-\newcommand{\latex}[1]{#1}
-
-% Use latex2html 98.2.
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % from the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document-specific \newcommand or \newenvironment commands.
+% ? Document-specific \providecommand or \newenvironment commands.
 % ? End of document-specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle}
-   \end{center}
-   \vspace{5mm}
-
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-\end{htmlonly}
-
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-\newpage
-\begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \tableofcontents
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
-\end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section{Introduction\xlabel{introduction}}
 
-{\tt FTNCHEK} is designed to detect a variety of errors in Fortran77
-source-code, especially mistakes that tend to be missed by compilers
-and linkers.
-
 Probably the most valuable feature is that it performs careful checks on
-subprogram interfaces. {\tt FTNCHEK} examines the actual arguments in
-each {\tt CALL} statement (or function call) and compares them with the
-corresponding formal arguments of the {\tt SUBROUTINE} (or {\tt
-FUNCTION}) subprogram. It warns of mismatches in the number of arguments
+subprogram interfaces. \texttt{FTNCHEK} examines the actual arguments in
+each \texttt{CALL} statement (or function call) and compares them with the
+corresponding formal arguments of the \texttt{SUBROUTINE} (or \texttt{FUNCTION}) subprogram. It warns of mismatches in the number of arguments
 or of incompatibilities in the data type or dimensions of each one. It
 also checks that where an argument is used before being set in the
 subprogram that it has a defined value on entry, and correspondingly
 that arguments are set on exit where the value is used later in the
 calling program.
 
-Before using {\tt FTNCHEK} it is advisable to get the source-code to
+Before using \texttt{FTNCHEK} it is advisable to get the source-code to
 compile without errors. For the most comprehensive checking all the
-source-code should be submitted to {\tt FTNCHEK} in the same run. This
+source-code should be submitted to \texttt{FTNCHEK} in the same run. This
 gives rise to an obvious difficulty where a program links with
-subprograms in a pre-compiled library.  {\tt FTNCHEK} can cope with
+subprograms in a pre-compiled library.  \texttt{FTNCHEK} can cope with
 this, if the source-code of the library is available, by producing a
-{\em project file} which stores the characteristics of each subprogram
+\emph{project file} which stores the characteristics of each subprogram
 interface for subsequent use. After project files have been produced for
-each library, they can be used in later runs of {\tt FTNCHEK} to ensure
+each library, they can be used in later runs of \texttt{FTNCHEK} to ensure
 that calls to library routines contain no obvious errors.
 
-Depending on the options selected, {\tt FTNCHEK} will also flag
+Depending on the options selected, \texttt{FTNCHEK} will also flag
 variables that are never used, are not initialized, or which have no
 explicitly declared data type; it can also perform consistency checks on
-{\tt COMMON} blocks, and warn of the existence of non-standard or (not
+\texttt{COMMON} blocks, and warn of the existence of non-standard or (not
 quite the same thing) non-portable Fortran syntax.
 
 \subsection{New Features\xlabel{new_features}}
 
-Version 2.6.1 of {\tt FTNCHEK} has several enhancements in its error
+Version 2.6.1 of \texttt{FTNCHEK} has several enhancements in its error
 checking. Some new options have been added to give greater flexibility,
 although this has resulted in some changes to the default settings
-of existing options.  The {\tt BYTE} type statement is now accepted, and
+of existing options.  The \texttt{BYTE} type statement is now accepted, and
 a useful new option lists a call-tree of subprogram dependencies.
 
 \section{Non-standard Syntax\xlabel{nonstandard_syntax}}
 
-Since {\tt FTNCHEK} is designed to help in writing portable code,
+Since \texttt{FTNCHEK} is designed to help in writing portable code,
 features that do not conform to the Fortran77 Standard are supported
-only to a limited extent.  It will accept {\tt INCLUDE}, {\tt IMPLICIT
-NONE}, {\tt DO WHILE}, {\tt END DO}, {\tt ACCEPT}, {\tt TYPE}, and {\tt
-NAMELIST} statements, and data-type specifications of {\tt LOGICAL*1},
-{\tt BYTE}, {\tt INTEGER*1}, {\tt INTEGER*2}, and {\tt REAL*8}.  It also
+only to a limited extent.  It will accept \texttt{INCLUDE}, \texttt{IMPLICIT
+NONE}, \texttt{DO WHILE}, \texttt{END DO}, \texttt{ACCEPT}, \texttt{TYPE}, and \texttt{NAMELIST} statements, and data-type specifications of \texttt{LOGICAL*1},
+\texttt{BYTE}, \texttt{INTEGER*1}, \texttt{INTEGER*2}, and \texttt{REAL*8}.  It also
 permits symbolic names that include underscores, and symbolic names up
 to 31 characters long. Case differences are ignored, and tabs are
 treated as if there were tab-stops every eight columns.  Most of these
-extensions will, however, be flagged if the {\tt -f77} switch is used.
+extensions will, however, be flagged if the \texttt{-f77} switch is used.
 
-{\tt FTNCHEK} does {\bf not}, however, understand the use of VMS
-intrinsic functions such as {\tt \%VAL}, {\tt \%LOC}, or {\tt \%REF}. In
+\texttt{FTNCHEK} does \textbf{not}, however, understand the use of VMS
+intrinsic functions such as \texttt{\%VAL}, \texttt{\%LOC}, or \texttt{\%REF}. In
 addition spurious warnings may be generated from the use of array names
-which are identical to certain Fortran keywords (for example {\tt DATA}
-or {\tt READ}).  Details of these and other minor limitations are given
+which are identical to certain Fortran keywords (for example \texttt{DATA}
+or \texttt{READ}).  Details of these and other minor limitations are given
 in the author's own documentation (see section 5 below).  Sometimes a
 few unnecessary warnings appear, but this is usually acceptable given
 the comprehensive checking that is performed.
 
-\section{Running {\tt FTNCHEK}\xlabel{running_ftnchek}}
+\section{Running \texttt{FTNCHEK}\xlabel{running_ftnchek}}
 
-\begin{verbatim}
-      $ ftnchek -option -option ...  filename filename ...
-\end{verbatim}
+\begin{terminalv}
+$ ftnchek -option -option ...  filename filename ...
+\end{terminalv}
 
 runs the program on one or more source files (the dots above represent
 optional repetition). If no options (switches) are specified, the
@@ -290,39 +97,37 @@ results go to standard output (the screen).  The default action is to
 show error messages, warnings, and informational messages, but not the
 program listing, symbol tables, or call-tree.
 
-Each option begins with the {\tt -} character (and may be abbreviated to
-a dash plus 3 characters).  On VMS systems either {\tt /} or {\tt -}
+Each option begins with the \texttt{-} character (and may be abbreviated to
+a dash plus 3 characters).  On VMS systems either \texttt{/} or \texttt{-}
 may precede an option and a space is unnecessary before a slash. Each
 option remains in effect from the point it is encountered until it is
 over-ridden by a later option; for example an output listing may be
 enabled for some source files and not for others. The options are
 outlined below; a summary can be obtained on-line by using the command:
 
-\begin{verbatim}
-      $ ftnchek -help
-\end{verbatim}
+\begin{terminalv}
+$ ftnchek -help
+\end{terminalv}
 
-If a filename does not include an explicit extension, {\tt FTNCHEK} first
-looks for a project file with extension {\tt .prj}, otherwise it looks
-for a Fortran source file with the extension {\tt .f} (on Unix) or {\tt
-.for} (on VMS).  If more than one filename is specified the modules are
-treated as if they were on a single file. If no filename is given {\tt
-FTNCHEK} reads from the standard input.
+If a filename does not include an explicit extension, \texttt{FTNCHEK} first
+looks for a project file with extension \texttt{.prj}, otherwise it looks
+for a Fortran source file with the extension \texttt{.f} (on Unix) or \texttt{.for} (on VMS).  If more than one filename is specified the modules are
+treated as if they were on a single file. If no filename is given \texttt{FTNCHEK} reads from the standard input.
 
-The defaults for {\tt FTNCHEK} may be altered (on Unix) by setting
+The defaults for \texttt{FTNCHEK} may be altered (on Unix) by setting
 environment variables or (on VMS) by defining logical names.  For
-example, to enable the {\tt -list} option by default use the appropriate
+example, to enable the \texttt{-list} option by default use the appropriate
 command below:
 
-\begin{verbatim}
-      % setenv FTNCHEK_LIST YES
-      $ DEFINE FTNCHEK_LIST YES
-\end{verbatim}
+\begin{terminalv}
+% setenv FTNCHEK_LIST YES
+$ DEFINE FTNCHEK_LIST YES
+\end{terminalv}
 
 \section{Options\xlabel{options}}
 
-{\em These options are {\bf off} by default, but may be switched
-{\bf on} by using the appropriate switch:}
+\emph{These options are \textbf{off} by default, but may be switched
+\textbf{on} by using the appropriate switch:}
 
 \begin{quote}
 \begin{description}
@@ -349,22 +154,20 @@ first six characters.
 \end{description}
 \end{quote}
 
-{\em These options are {\bf on} by default, but may be switched {\bf
-off} by negating the switch (e.g. specifying on Unix {\tt -nodeclare} or
-on VMS {\tt /NODECLARE }):}
+\emph{These options are \textbf{on} by default, but may be switched \textbf{off} by negating the switch (e.g. specifying on Unix \texttt{-nodeclare} or
+on VMS \texttt{/NODECLARE }):}
 
 \begin{quote}
 \begin{description}
 
 \item [--declare] List all identifiers with no
-explicitly declared data type (equivalent to using {\tt IMPLICIT NONE}).
+explicitly declared data type (equivalent to using \texttt{IMPLICIT NONE}).
 
 \item [--extern] List all external subprograms that are never
 defined (this will flag use of library routines or non-standard
 intrinsics).
 
-\item [--hollerith] Warn about Hollerith constants under the {\bf
---port} option.
+\item [--hollerith] Warn about Hollerith constants under the \textbf{--port} option.
 
 \item [--linebreak] Treat line-breaks in continued statements as space.
 
@@ -379,24 +182,24 @@ lines.
 converting real to integer.
 
 \item [--verbose] Output all messages; if switched off, omits some
-inessential messages, {\em e.g.} reporting the name of each
-{\tt INCLUDE} file.
+inessential messages, \emph{e.g.} reporting the name of each
+\texttt{INCLUDE} file.
 
 \end{description}
 \end{quote}
 
-{\em These options each take a numeric or string argument:}
+\emph{These options each take a numeric or string argument:}
 
 \begin{quote}
 \begin{description}
 
-\item [--arrays=n] Specify checks for array arguments, {\it n} range 0
+\item [--arrays=n] Specify checks for array arguments, \textit{n} range 0
 to 3, default 3. (0=none, 1=rank, 2=size, 3=all).
 
-\item [--columns=n] Set the maximum line length to {\it n} columns (text
+\item [--columns=n] Set the maximum line length to \textit{n} columns (text
 beyond this is ignored), range 0 to 132, default 72.
 
-\item [--common=n] Specify checks for {\tt COMMON} blocks, {\it n}
+\item [--common=n] Specify checks for \texttt{COMMON} blocks, \textit{n}
 range 0 to 3, default 3.  (0=none, 1=data-types, 2=array-storage,
 3=all).
 
@@ -404,10 +207,9 @@ range 0 to 3, default 3.  (0=none, 1=data-types, 2=array-storage,
 cumulative option.
 
 \item [--output=filename] Send output to the given file (the default
-file extension is {\tt .lis}). By default all output goes to {\tt
-stdout} (the screen) and on Unix may be redirected.
+file extension is \texttt{.lis}). By default all output goes to \texttt{stdout} (the screen) and on Unix may be redirected.
 
-\item [--usage=n] Specify checks for unused variables, {\it n} range
+\item [--usage=n] Specify checks for unused variables, \textit{n} range
 0 to 3, default 3. (0=none, 1=used-before-set, 2=unused, 3=all).
 
 \end{description}
@@ -415,17 +217,17 @@ stdout} (the screen) and on Unix may be redirected.
 
 \section{Further Information\xlabel{further_information}}
 
-This note just summarizes the facilities of {\tt FTNCHEK}. Its author,
+This note just summarizes the facilities of \texttt{FTNCHEK}. Its author,
 Dr Robert Moniot of Fordham University (USA), has provided a detailed
-manual which is available as an ASCII file {\tt ftnchek.doc} or in
-PostScript form as {\tt ftnchek.ps}.
+manual which is available as an ASCII file \texttt{ftnchek.doc} or in
+PostScript form as \texttt{ftnchek.ps}.
 
 \section{An Alternative\xlabel{an_alternative}}
 
-Starlink users have access to a commercial product called {\tt FORCHECK}
+Starlink users have access to a commercial product called \texttt{FORCHECK}
 which is licenced on the STADAT node.  This has rather similar
 functionality but both programs have their strengths and
-weaknesses. An obvious advantage of {\tt FTNCHEK} is that it is a
+weaknesses. An obvious advantage of \texttt{FTNCHEK} is that it is a
 public-domain product which can be used freely on any Unix, VMS, or
 MS-DOS system.
 
