surf: fix description lists in ssn72.tex
These were caused by tex4ht needing slightly more braces than
is required in latex when using commands after _ or ^. Issue
referenced in commit 8b70ea05231

--- a/applications/surf/docs/ssn72/ssn72.tex
+++ b/applications/surf/docs/ssn72/ssn72.tex
@@ -661,7 +661,7 @@ relative to a reference pixel (usually the centre pixel on each array, H7 and
 C14). This correction is applied to the data using the \flatf\ task
 (specifically the \texttt{sculib\_flatfield\_data} routine):
 \begin{equation}
-V_\mathrm{flatfielded}(B) = V_\mathrm{original}(B) \times \mathrm{BOL\_CALB}(B)
+V_{\textrm{flatfielded}}(B) = V_{\mathrm{original}}(B) \times \mathrm{BOL\_CALB}(B)
 \end{equation}
 where $B$ is the selected bolometer.
 
