SC/9: minor fixes to appearance
Fixes the issue with \verb+\begin{verbatim}+ appearing
differently from surrounding terminalv environment. Minor
appearance improvements to one of the figures.

--- a/docs/sc/009/sc9.tex
+++ b/docs/sc/009/sc9.tex
@@ -356,21 +356,29 @@ There are three main areas of help information: CAR\_HELP for information
 about the CAR routines; CAT\_HELP for information about the catalogues and
 SCAR\_HELP for general information.
 \end{terminalv}
-\verb+\begin{terminalv}+
+{\color{MidnightBlue}
+\hspace{0.5in}\verb+\begin{terminalv}+
+}
 \begin{terminalv}
 ICL> CAR_HELP
 SCAR COMMANDS Subtopic? CAR_SEARCH
 \end{terminalv}
-\verb+\end{terminalv}+
+{\color{MidnightBlue}
+\hspace{0.5in}\verb+\end{terminalv}+
+}
 \begin{terminalv}
 You would find information about the CAR\_SEARCH procedure.
 \end{terminalv}
-\verb+\begin{terminalv}+
+{\color{MidnightBlue}
+\hspace{0.5in}\verb+\begin{terminalv}+
+}
 \begin{terminalv}
 ICL> CAT_HELP
 Topic? $Summary
 \end{terminalv}
-\verb+\end{terminalv}+
+{\color{MidnightBlue}
+\hspace{0.5in}\verb+\end{terminalv}+
+}
 \begin{terminalv}
 The catalogues are summarised in this help library.
 The acronym for the IRAS point source catalogue is IRPS.
@@ -1271,7 +1279,7 @@ The following qualifiers are recognized:
   \textbf{\LaTeX\ OUTPUT}
 \end{center}
 \setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
+\setlength{\unitlength}{1.2mm}
 \begin{figure}[h]
   \begin{center}
     \begin{picture}(142,80)
